# AI-Content-Generation-

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  FINAL_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  automation_ditele.py  automation_engine.py  automation_phase1_content.py  check_source_folder.py  cleanup_main_py.py  docker-compose.dev.yml  env.example  package.json  personal_google_drive_service.py  pyproject.toml  quick_verification.py  requirements.txt  start_docker_system.ps1  stop_docker_system.ps1  🎉_FINAL_ENHANCED_SYSTEM_REPORT.md
.github/: copilot-instructions.md
app/: config.py  main_backup.py
app/services/: advanced_document_processor.py  content_intelligence.py  content_quality_validator.py  document_analyzer.py  gemini_ai_service.py  google_services.py  intelligent_gemini_service.py  langgraph_orchestrator.py  rag_enhanced_processor.py
archived/: README.md  automation_engine.py  automation_phase1_content.py  automation_phase2_presentation.py
archived/phase2_components/: README.md
archived/phase2_components/api/: main.py
archived/phase2_components/services/: advanced_document_processor.py
archived_phase2_components/docker/: docker-compose.yml  docker_logs.ps1
archived_phase2_components/services/: crewai_orchestrator.py  langgraph_orchestrator.py  production_monitor.py  rag_enhanced_processor.py
frontend/: .eslintrc.json  .gitignore  README.md  env.local.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: APIDebugConsole.tsx  AnalyticsDashboard.tsx  ReviewQueue.tsx  WorkflowMonitor.tsx
frontend/src/styles/: globals.css
